--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-html,body {
-  background-color: #4158D0;
-  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+html,
+body {
+  background-color: #33374c;
 }
 
 .bg-glass {
-  background: rgba( 255, 255, 255, 0.25 );
-backdrop-filter: blur( 5px );
--webkit-backdrop-filter: blur( 5px );
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
