fonts, title, favicon

--- a/src/css/bingo.scss
+++ b/src/css/bingo.scss
@@ -4,3 +4,10 @@
     clip-path: circle(100%);
   }
 }
+
+@font-face {
+  font-family: "Breve";
+  src: url("BreveDisplay.otf") format("opentype");
+  font-style: normal;
+  font-weight: normal;
+}
