--- a/src/css/bingo.scss
+++ b/src/css/bingo.scss
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: "Breve";
-  src: url("BreveDisplay.otf") format("opentype");
+  src: url("/BreveDisplay.otf") format("opentype");
   font-style: normal;
   font-weight: normal;
 }
