--- a/src/css/bingo.scss
+++ b/src/css/bingo.scss
@@ -1,6 +1,11 @@
 .bingo {
   clip-path: circle(0%);
+  opacity: 0;
+  visibility: hidden;
+  transition: clip-path 0.3s ease;
   &.active {
+    opacity: 1;
+    visibility: visible;
     clip-path: circle(100%);
   }
 }
